[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/dice/dice_hero_drop_target.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="dice_hero_drop_target" type="Node2D"]
script = ExtResource( 1 )

[node name="dice_drop_target" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dice_drop_target"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[connection signal="body_entered" from="dice_drop_target" to="." method="_on_dice_drop_target_body_entered"]
[connection signal="body_exited" from="dice_drop_target" to="." method="_on_dice_drop_target_body_exited"]
